@@ -3,6 +3,8 @@ Revision history for UFL-WebAdmin-SiteDeploy
 0.07
         - Refactor common defaults to
           UFL::WebAdmin::SiteDeploy::TestRepository
+        - Declare required attributes as such to make initialization
+          errors obvious
 
 0.06  Thu Jun 12 14:06:44 EDT 2008
         - Refactor deployment code
